update : removing for security purpose

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-GEMINI-API = "AIzaSyCv5gwWLCpoypg40Wf8IZxQoBO7okoAxP4"
-YT-API = "AIzaSyBzU5z6yqdAirNbDQIbqC2XGyudNmsc2CE"
+GEMINI-API = "gemin-key"
+YT-API = "yt-data-api3"
