--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,20 +1,28 @@
 FROM python:3.10-slim
 
-# system deps for pillow and basics
+# Install system dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
     build-essential libsndfile1 libglib2.0-0 libsm6 libxext6 libxrender1 \
     && rm -rf /var/lib/apt/lists/*
 
+# Upgrade pip
 RUN python -m pip install --upgrade pip
 
-# install CPU-only PyTorch + torchvision wheels (official CPU wheels)
+# Install PyTorch CPU-only
 RUN pip install --no-cache-dir --index-url https://download.pytorch.org/whl/cpu \
     torch torchvision
 
-RUN pip install --no-cache-dir fastapi uvicorn pillow python-multipart requests
+# Install FastAPI and other dependencies
+RUN pip install --no-cache-dir fastapi uvicorn pillow python-multipart requests python-dotenv pydantic
 
+# Set work directory
 WORKDIR /app
+
+# Copy your application
 COPY app.py /app/app.py
 
+# Expose API port
 EXPOSE 8080
+
+# Start FastAPI
 CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8080"]
